--- a/src/components/Board/Board.module.scss
+++ b/src/components/Board/Board.module.scss
@@ -1,89 +1,89 @@
-  .container {
-    display: grid;
-    grid-template-columns: repeat(9, 4.5rem);
-    grid-template-rows: repeat(9, 4.5rem);
+.container {
+  display: grid;
+  grid-template-columns: repeat(9, 4.5rem);
+  grid-template-rows: repeat(9, 4.5rem);
 
-    width: 45rem;
-    height: 45rem;
+  width: 45rem;
+  height: 45rem;
+  box-sizing: border-box;
+  margin: 0.5rem auto;
+
+  & > .cell {
+    height: 4.5rem;
+    width: 4.5rem;
     box-sizing: border-box;
-    margin: 0.5rem auto;
 
-    &>.cell {
-      height: 4.5rem;
-      width: 4.5rem;
-      box-sizing: border-box;
-
-      &>div, &>input {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        font-size: 3.25rem;
-        font-family: monospace;
-        font-weight: bold;
-      }
-
-      &>div {
-        border: 0.01rem dotted gray;
-        border-radius: 0.1rem;
-        padding: 0.1rem;
-        margin: 0.1rem;
-        cursor: default;
-        height: -webkit-fill-available;
-        height: -moz-available;
-        width: -webkit-fill-available;
-        width: -moz-available;
-      }
-  
-      &>input[type=number] {
-        background: #add8e680;
-        border: 0.01rem dotted gray;
-        border-radius: 0.01rem;
-        padding: 0.1rem;
-        margin: 0.1rem;
-        height: -webkit-fill-available;
-        height: -moz-available;
-        width: -webkit-fill-available;
-        width: -moz-available;
-        
-        color: blue;
-
-        outline: none;
-        cursor: pointer;
-        caret-color: transparent;
-        &:active, &:focus {
-          background-color: lightcoral;
-          color: darkred;
-        }
-      }
-  
-      input::-webkit-outer-spin-button,
-      input::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-      }
-  
-      /* Firefox */
-      input[type=number] {
-        -moz-appearance: textfield;
-      }
-  
-      &.highlighted {
-        &>div {
-          background: #87cefa;
-        }
-        &>input {
-          background-color: lightskyblue;
-        }
-      }
-  
-  
+    & > div,
+    & > input {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      font-size: 3.25rem;
+      font-family: monospace;
+      font-weight: bold;
     }
 
-    &>.bigCol:not(:nth-child(9n + 1)) {
-      border-left: 0.2rem solid black;
+    & > div {
+      border: 0.01rem dotted gray;
+      border-radius: 0.1rem;
+      padding: 0.1rem;
+      margin: 0.1rem;
+      cursor: default;
+      height: -webkit-fill-available;
+      height: -moz-available;
+      width: -webkit-fill-available;
+      width: -moz-available;
     }
 
-    &>.bigRow:nth-child(1n + 10) {
-      border-top: 0.2rem solid black;
+    & > input[type="number"] {
+      background: #add8e680;
+      border: 0.01rem dotted gray;
+      border-radius: 0.01rem;
+      padding: 0.1rem;
+      margin: 0.1rem;
+      height: -webkit-fill-available;
+      height: -moz-available;
+      width: -webkit-fill-available;
+      width: -moz-available;
+
+      color: blue;
+
+      outline: none;
+      cursor: pointer;
+      caret-color: transparent;
+      &:active,
+      &:focus {
+        background-color: lightcoral;
+        color: darkred;
+      }
+    }
+
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+    }
+
+    /* Firefox */
+    input[type="number"] {
+      -moz-appearance: textfield;
+    }
+
+    &.highlighted {
+      & > div {
+        background-color: #87cefa;
+      }
+      & > input {
+        background-color: lightskyblue;
+      }
     }
   }
+
+  & > .bigCol:not(:nth-child(9n + 1)) {
+    border-left: 0.2rem solid black;
+  }
+
+  & > .bigRow:nth-child(1n + 10) {
+    border-top: 0.2rem solid black;
+  }
+}
